# nachlang

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  MANIFIESTO.md  README.md  ejemplo.nach  ejemplo_convertido.py  nach_to_python.py  nachlang_converter.py  nachlang_repl.py  pyproject.toml  test.nach  test.py  test2.nach  test2.py  test3.nach  test3.py
.github/workflows/: ci.yml
examples/: hola_mundo.nach
grammar/: nachlang.ebnf  nachlang.lark
src/nachlang/: __init__.py  ast.py  parser.py  repl.py  transpiler.py
src/nachlang.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_parser.py  test_repl_ai.py  test_transpiler.py
